# cross_agent_sessions_resumer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  install.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: cass-independence-policy.md  cass-porting-notes.md
docs/json-schema/: conversion-result.json  error.json  providers.json  session-info.json  session-list.json
scripts/: e2e_test.sh  real_provider_smoke.sh
src/: discovery.rs  error.rs  lib.rs  main.rs  model.rs  pipeline.rs  responses.rs
src/providers/: claude_code.rs  codex.rs  cursor.rs  factory.rs  gemini.rs  kiro.rs  mod.rs  opencode.rs  pi_agent.rs  vibe.rs
tests/: atomic_write_test.rs  cass_parity_test.rs  cli_e2e_test.rs  corrupted_sqlite_test.rs  discovery_test.rs  error_paths_test.rs  fixtures_test.rs  invalid_session_id_test.rs  json_contract_test.rs  kiro_test.rs  malformed_input_test.rs  pipeline_test.rs  real_world_roundtrip_test.rs  roundtrip_test.rs  scalability_test.rs  writer_test.rs
tests/fixtures/: fixtures_manifest.json
tests/fixtures/claude_code/: cc_complex.jsonl  cc_malformed.jsonl  cc_missing_workspace.jsonl  cc_simple.jsonl  cc_unicode.jsonl
tests/fixtures/codex/: codex_legacy.json  codex_malformed.jsonl  codex_modern.jsonl  codex_reasoning.jsonl  codex_token_count.jsonl
tests/fixtures/edge/: edge_empty_content_cc.jsonl  edge_long_message_cc.jsonl  edge_null_timestamps_cc.jsonl  edge_single_sided_cc.jsonl
tests/fixtures/expected/: cc_complex.json  cc_malformed.json  cc_missing_workspace.json  cc_simple.json  cc_unicode.json  codex_legacy.json  codex_malformed.json  codex_modern.json  codex_reasoning.json  codex_token_count.json  edge_empty_content_cc.json  edge_long_message_cc.json  edge_null_timestamps_cc.json  edge_single_sided_cc.json  gmi_gemini_role.json  gmi_grounding.json  gmi_missing_workspace.json  gmi_simple.json
tests/fixtures/gemini/: gmi_gemini_role.json  gmi_grounding.json  gmi_missing_workspace.json  gmi_simple.json
tests/fixtures/real_world/: cc_real_world_sanitized.jsonl  codex_real_world_sanitized.jsonl  gemini_real_world_sanitized.json
